--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,7 @@ jobs:
 
     - name: secret value test
       run: |
+          cd ./client
           node secret.js ${TEST}
 
     - name: install & request
